syntax = "proto3";
package proto.deploymentEnvironment;

option go_package = "config/deploymentConfigurations/deploymentEnv";

// Configuration for the clouddriver microservice.
message HostAliases {
    repeated HostAliasService spin_igor = 1;
    repeated HostAliasService spin_kayenta = 2;
    repeated HostAliasService spin_orca = 3;
    repeated HostAliasService spin_echo = 4;
    repeated HostAliasService spin_clouddriver = 5;
    repeated HostAliasService spin_front50 = 6;
    repeated HostAliasService spin_rosco = 7;
    repeated HostAliasService spin_deck = 8;
    repeated HostAliasService spin_gate = 9;
    repeated HostAliasService spin_fiat = 10;

}

message HostAliasService {
    string ip = 1;
    repeated string hostnames = 2;
}

/*

Example Config:

    hostAliases:
      spin-igor:
      - ip: 127.0.0.1
        hostnames:
        - search-jenkins.sc-corp.net
        - dashboard.sc-corp.net
      spin-kayenta:
      - ip: 127.0.0.1
        hostnames:
        - search-jenkins.sc-corp.net
        - dashboard.sc-corp.net
        - security-overlord.sc-corp.net
        - graphite.snap
      spin-orca:
      - ip: 127.0.0.1
        hostnames:
        - search-jenkins.sc-corp.net
        - dashboard.sc-corp.net
        - security-overlord.sc-corp.net
        - mesh-health.snap
        - ap-webhook.snap
      spin-echo:
      - ip: 127.0.0.1
        hostnames:
        - mesh-notifications.snap


*/